--- a/css/main.css
+++ b/css/main.css
@@ -23,7 +23,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-rendering: optimizeLegibility;
-
+  width: 320px;
   font-size: 1rem;
   line-height: 1.5rem;
 }
